--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -15,5 +15,14 @@
         android:gravity="center"
         android:text="Big Data Mobile"
         android:textSize="16sp" />
-    
+
+    <Button
+        android:id="@+id/retry_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="GET DOC"
+        android:textColor="#ffffff"
+        android:textSize="14sp" />
+
 </LinearLayout>
