--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -23,6 +23,17 @@
         android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/mode_fab"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_above="@+id/network_broadcast"
+        android:layout_alignRight="@+id/network_broadcast"
+        android:layout_marginBottom="8dp"
+        android:src="@drawable/traffic_mode"
+        app:backgroundTint="@color/colorPrimary"
+        app:fabSize="auto" />
+
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/network_broadcast"
         android:layout_width="50dp"
         android:layout_height="50dp"
